# mlang

./: LICENSE  README.md
doc/: language.tex
mlang/: dune-project
mlang/lib/: args.ml  dune  error.ml  lexer.mll  m.ml  m.mli  parser.mly  poly_checker.ml  pp.ml  type_checker.ml  type_checker.mli
mlang/test/: dune
mlang/test/examples/: test0.m  test03.m  test08.m  test13.m  test14.m  test17.m  test19.m  test21.m  test29.m  test5.m  test6.m  test7.m
mlang/test/expected/: test11.m.expected  test15.m.expected  test17.m.expected  test19.m.expected  test27.m.expected  test30.m.expected
slang/: dune-project
slang/lib/: args.ml  config.ml  const.ml  driver.ml  dune  error.ml  exp.ml  interpret.ml  lexer.mll  parser.mly  pp.ml  s.ml  s.mli  typ.ml  type_checker.ml  type_checker.mli  util.ml  var.ml
slang/test/examples/: test0.s  test0.sl  test01.sl  test02.sl  test03.sl  test04.m  test04.s  test05.s  test05.sl  test06.s  test07.sl  test08.sl  test09.sl  test10.s  test11.sl  test12.sl  test13.s  test14.sl  test15.m  test15.s  test16.m  test16.s  test17.s  test17.sl  test18.m  test18.s  test19.s  test20.m  test20.s  test21.s  test22.m  test22.sl  test23.s  test24.m  test24.s  test25.m  test25.s  test26.m  test26.sl  test27.sl  (+8 more)
slang/test/expected/: t.sl.04.s.expected  test0.s.expected  test05.m.expected  test07.m.expected
