(* -*- tuareg -*- *)
let tc_dir = "examples"

let test_cases =
  Sys.readdir tc_dir
  |> Array.to_list
  |> List.sort String.compare

let stanza_fmt : ('a, 'b, 'c, 'd, 'e, 'f) format6 = {|
(rule
 (with-stdout-to %s.output (run ../bin/main.exe ./examples/%s)))

(rule
 (alias runtest)
 (action (diff expected/%s.expected %s.output)))
|}


let stanzas =
  List.map (fun tc_name -> Printf.sprintf stanza_fmt tc_name tc_name tc_name tc_name) test_cases
;;
Jbuild_plugin.V1.send (String.concat "\n" stanzas)
